--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       <h1 class="hookiah1">HOOKIA</h1>
       <div class="ml-auto d-flex align-items-center justify-content-end w-25 d-none d-md-flex">
         <a href="/pages/register/register.html" class="mx-4">
-          <h1 class="login-text">REGISTRATE</h1>
+          <h5 class="login-text">REGISTRATE</h5>
         </a>
         <a href="/pages/login/login.html">
-          <h1 class="login-text">INICIAR<br>SESION</h1>
+          <h5 class="login-text">INICIAR<br>SESION</h5>
         </a>
       </div>
     </div>
   </nav>
-  <!-- ===================================
+  <!-- =====================================
     ============= NAVBAR NAV ===============
     ======================================== -->
 
@@ -86,6 +86,14 @@
             <a class="nav-link" href="#info-help">AYUDA</a>
           </li>
 
+          <div class="d-flex align-items-center d-md-none justify-content-center">
+          <a href="/pages/register/register.html" class="mx-4">
+            <h5 class="login-text">REGISTRATE</h5>
+          </a>
+          <a href="/pages/login/login.html">
+            <h5 class="login-text">INICIAR<br>SESION</h5>
+          </a>
+          </div>
         </ul>
       </div>
     </div>
@@ -93,8 +101,8 @@
 
 
 
-  <!-- ========================================
-    ============= CAROUSEL ===================
+  <!-- =====================================
+    ============= CAROUSEL =================
     ======================================== -->
 
   <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -395,8 +403,8 @@
                 </table>
               </div>
 
-              <div class="col-md-4 | col-lg-3 | col-xl-3">
-                <h2 class="card-title card-h2 m-4 ">HOOKIA</h2>  
+              <div class="col-md-4 | col-lg-3 | col-xl-3 | footer-title-cont">
+                <h2 class="card-title card-h2">HOOKIA</h2>  
               </div>
 
               <div class="container-ubication | col-md-3 | col-lg-3 | col-xl-3 | w-desktop-25 | w-mobile-100 | text-start">
@@ -421,19 +429,6 @@
       </div>
     </div>
   </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
