terminado diseño de admin products y empezando con admin users

--- a/pages/admin-users/admin-users.html
+++ b/pages/admin-users/admin-users.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hookia | Admin - Products</title>
+    <title>Hookia | Admin - Users</title>
     <link rel="shortcut icon" href="/assets/images/1x/LOGO.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/admin-pages.css">
     <link rel="stylesheet" href="/css/footer.css">
@@ -38,7 +38,7 @@
 
     <div class="container main-container mt-5">
 
-        <h2 class="hookiah1 fs-4 m-0 text-center">Administrador de Productos</h2>
+                <h2 class="hookiah1 fs-4 m-0 text-center">Administrador de Usuarios</h2>
 
         <button type="button" class="btn btn-dark my-3" data-bs-toggle="modal" data-bs-target="#formModal">
             Añadir
@@ -53,12 +53,11 @@
                 <table class="table table-dark table-striped">
                     <thead>
                         <tr>
-                            <th scope="col">Imagen</th>
-                            <th scope="col">Titulo</th>
-                            <th scope="col">Descripcion Producto</th>
-                            <th scope="col">Precio</th>
-                            <th scope="col">Categoria</th>
-                            <th scope="col">Acciones</th>
+                            <th scope="col">Usuario</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Rol</th>
+                            <th scope="col">Creado</th>
+                            <th scope="col">Acciones</th> 
                         </tr>
                     </thead>
                     <tbody id="table-body">
@@ -74,6 +73,46 @@
                     </tr> -->
 
                     </tbody>
+                    <tr>
+                        <td>Nombre de usuario</td>
+                        <td>correo@ejemplo.com</td>
+                        <td>Rol de usuario</td>
+                        <td>Fecha de creación</td>
+                        <td>
+                            <button class="btn btn-primary">Editar</button>
+                            <button class="btn btn-danger">Eliminar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre de usuario</td>
+                        <td>correo@ejemplo.com</td>
+                        <td>Rol de usuario</td>
+                        <td>Fecha de creación</td>
+                        <td>
+                            <button class="btn btn-primary">Editar</button>
+                            <button class="btn btn-danger">Eliminar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre de usuario</td>
+                        <td>correo@ejemplo.com</td>
+                        <td>Rol de usuario</td>
+                        <td>Fecha de creación</td>
+                        <td>
+                            <button class="btn btn-primary">Editar</button>
+                            <button class="btn btn-danger">Eliminar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre de usuario</td>
+                        <td>correo@ejemplo.com</td>
+                        <td>Rol de usuario</td>
+                        <td>Fecha de creación</td>
+                        <td>
+                            <button class="btn btn-primary">Editar</button>
+                            <button class="btn btn-danger">Eliminar</button>
+                        </td>
+                    </tr>
                 </table>
             </div>
 
