--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -32,12 +32,12 @@
                 <h1>REGISTRATE</h1>
 
                 <div class="input-box">
-                    <input class="input-boxx" type="text" placeholder="Usuario" maxlength="15" required>
+                    <input class="input-boxx" type="text" placeholder="Usuario" minlength="2" maxlength="15" required>
                     <i class='bx bxs-user'></i>
                 </div>
 
                 <div class="input-box">
-                    <input class="input-boxx" type="text" placeholder="Correo electrónico" required>
+                    <input class="input-boxx" type="email" placeholder="Correo electrónico" required>
                     <i class='bx bxs-envelope'></i>
                 </div>
 
