login mejorado, entre otras cosas en el administrador de productos

--- a/pages/admin-products/admin-products.html
+++ b/pages/admin-products/admin-products.html
@@ -56,13 +56,9 @@
 
                 </ul>
 
-                <div class="d-flex text-white">
-                    <div id="user-header-name">
-                    </div>
-                    <div id="user-action">
-                        
-                    </div>
-                    
+                <div class="d-flex align-items-center text-white">
+                    <div id="user-header-name"></div>
+                    <div id="user-action" class="m-2"></div>
                 </div>
             </div>
         </div>
@@ -133,7 +129,7 @@
                         <div class="mb-3">
                             <label for="tituloProducto" class="form-label">Nombre producto</label>
                             <input type="text" name="tituloName" class="form-control" id="tituloProducto"
-                                placeholder="Playstation 3" required minlength="3" maxlength="70">
+                                placeholder="Remera Trasher" required minlength="3" maxlength="70">
                         </div>
                         <!-- Input precio -->
                         <div class="mb-3 d-flex gap-3">
@@ -146,9 +142,9 @@
                                 <label for="categoriaProducto" class="form-label">Categoria</label>
                                 <select class="form-select" id="categoriaProducto" name="categoria" required>
                                     <option value=""></option>
-                                    <option value="consolas">Consolas</option>
-                                    <option value="juegos">Juegos</option>
-                                    <option value="accesorios">Accesorios</option>
+                                    <option value="consolas">Remeras</option>
+                                    <option value="juegos">Pantalones</option>
+                                    <option value="accesorios">Buzos</option>
                                 </select>
                             </div>
                         </div>
