--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -31,7 +31,7 @@
             <form id="login">
                 <h1>INICIAR SESIÓN</h1>
                 <div class="input-box">
-                    <input type="text" name="email" placeholder="Usuario" required>
+                    <input type="text" name="email" placeholder="Email" required>
                     <i class='bx bxs-user'></i>
                 </div>
                 <div class="input-box">
