terminada la parte visual y responsive de admin-users y products

--- a/pages/admin-products/admin-products.html
+++ b/pages/admin-products/admin-products.html
@@ -43,23 +43,23 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                <ul id="nav-list" class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul id="nav-list" class="navbar-nav me-auto mb-2 mb-lg-0 p-5">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/admin-products/admin-products.html">Administrador de
-                            Productos</a>
+                        <a class="nav-link text-center adm-category-anchor m-2 p-2" href="/pages/admin-products/admin-products.html">Administrador de Productos</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/admin-users/admin-users.html">Administrador de Usuarios</a>
+                        <a class="nav-link text-center adm-category-anchor m-2 p-2" href="/pages/admin-users/admin-users.html">Administrador de Usuarios</a>
                     </li>
 
                 </ul>
 
-                <div class="d-flex align-items-center text-white">
+                <div class="d-flex align-items-center text-white justify-content-center">
                     <div id="user-header-name"></div>
                     <div id="user-action" class="m-2"></div>
                 </div>
+                
             </div>
         </div>
     </div>
