--- a/pages/admin-users/admin-users.html
+++ b/pages/admin-users/admin-users.html
@@ -43,22 +43,23 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                <ul id="nav-list" class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul id="nav-list" class="navbar-nav me-auto mb-2 mb-lg-0 p-5">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/admin-products/admin-products.html">Administrador de Productos</a>
+                        <a class="nav-link text-center adm-category-anchor m-2 p-2" href="/pages/admin-products/admin-products.html">Administrador de Productos</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/pages/admin-users/admin-users.html">Administrador de Usuarios</a>
+                        <a class="nav-link text-center adm-category-anchor m-2 p-2" href="/pages/admin-users/admin-users.html">Administrador de Usuarios</a>
                     </li>
 
                 </ul>
 
-                <div class="d-flex align-items-center text-white">
+                <div class="d-flex align-items-center text-white justify-content-center">
                     <div id="user-header-name"></div>
                     <div id="user-action" class="m-2"></div>
                 </div>
+                
             </div>
         </div>
     </div>
@@ -67,7 +68,7 @@
 
     <div class="container main-container mt-5">
         <div class="row justify-content-center">
-            <h2 class="hookiah1 fs-4 m-0 text-center">Administrador de Usuarios</h2>
+            <h2 class="hookiah1 fs-4 m-0 text-center ">Administrador de Usuarios</h2>
         </div>
         <button type="button" class="btn btn-dark my-3" data-bs-toggle="modal" data-bs-target="#formModal">
             Añadir
